trying to fix a double scrollbar issue in the record

--- a/perma_web/static/css/style-responsive-archive.scss
+++ b/perma_web/static/css/style-responsive-archive.scss
@@ -23,8 +23,12 @@ $color-yellow: #d0a60f;
     100% {background-color: white;}
 }
 
-body, html {
+html {
 	overflow: visible;
+}
+
+body {
+	overflow: hidden;
 }
 
 a {
